Bug 100617 - Images not printed when using 2 or more page per sheet layout
Summary: Images not printed when using 2 or more page per sheet layout
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.2.0.0.beta2
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0 target:5.2.4
Keywords: bibisected, bisected, regression
: 102986 103795 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-06-26 13:35 UTC by Hans Burkard
Modified: 2017-01-12 18:10 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
2 page document with images on both pages (318.06 KB, application/vnd.oasis.opendocument.text)
2016-06-26 13:35 UTC, Hans Burkard
Details
Image, first imported to Draw and then copied into Writer, works right. (32.97 KB, application/pdf)
2016-10-20 09:38 UTC, Robert Großkopf
Details
Document with images inserted from Draw. (40.14 KB, application/vnd.oasis.opendocument.text)
2016-10-20 09:44 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hans Burkard 2016-06-26 13:35:30 UTC
Created attachment 125923 [details]
2 page document with images on both pages

Images on the second and following pages are not printed when using "2 page per sheet"-layout (however images on first page are printed). see test document attached.
Comment 1 Buovjaga 2016-07-02 19:17:56 UTC
You tested with 5.2 beta2. Does it work in an older version?
Comment 2 Hans Burkard 2016-07-04 07:03:38 UTC
(In reply to Buovjaga from comment #1)
> You tested with 5.2 beta2. Does it work in an older version?

I never had such a problem with 5.1.x
Comment 3 Buovjaga 2016-07-15 18:01:40 UTC
Reproduced by printing to PDF file.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.3.0.0.alpha0+
Build ID: 046244bcfe1c5c1cd2325fe74b933c05e43cf190
CPU Threads: 8; OS Version: Linux 4.6; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on July 7th 2016
Comment 4 Michael Weghorn 2016-08-13 14:46:50 UTC
Bibisect result (using the "lo-linux-dbgutil-daily-till52" repository):
 dd8f4aa045132c8119d74079ec4ddc644437d633 is the first bad commit
commit dd8f4aa045132c8119d74079ec4ddc644437d633
Author: Miklos Vajna <vmiklos@collabora.co.uk>
Date:   Thu May 5 05:38:44 2016 +0200

    2016-05-05: source-hash-cbb6367e75e3cc8b5b2b6f2ed703e5a316d8f325

:100644 100644 902fffe538be63b82b38fec9b8eebd51fae34903 de40e77ae8c13bb7638cb6f9306f43724b74ac37 M	build-info.txt
:040000 040000 a3406a12f2070aabdf6472bfe799a940f697a975 829260508f3ad8aeb87d0005bec36ed6cda9b4b4 M	opt

---

$ git bisect log
# bad: [d3acb9dfa21e2597d0affe3f04fe18b2022b9026] 2016-05-26: source-hash-a042951ad4db2b84021e1d43361511dec998ce82
# good: [69eedb44a433e3be69137a83238a4184785c752f] 2015-11-25: source-hash-7289a140fc68dc898ba2b2357cc960968195f236
git bisect start 'master' 'oldest'
# good: [7d1c6fda154836547542c6d741f34a158dd1102c] 2016-02-24: source-hash-f84b8c03462238b821724b7f504ad141c83fcf8f
git bisect good 7d1c6fda154836547542c6d741f34a158dd1102c
# good: [2592d68f5be89cc78dd3fc00360d4829790c2827] 2016-04-10: source-hash-7b9a5e8124328da9d81aed58cf944c91560a7c07
git bisect good 2592d68f5be89cc78dd3fc00360d4829790c2827
# good: [c8c7bdf3034dccf1b28146e88e6280e2ca7c814c] 2016-05-03: source-hash-fa6efd4511a999618fd3958c1c72811dc0ef83ee
git bisect good c8c7bdf3034dccf1b28146e88e6280e2ca7c814c
# bad: [1ca1df88ce7585c7511390d414644c21883eee4a] 2016-05-14: source-hash-442387bdf493aa6a752fd2531507625dc9e5a4fc
git bisect bad 1ca1df88ce7585c7511390d414644c21883eee4a
# bad: [ce00132011f1ea73182eae7be3e9bd29b68f9a6b] 2016-05-08: source-hash-ead37770442a0244094779d199303b7b7e6d634c
git bisect bad ce00132011f1ea73182eae7be3e9bd29b68f9a6b
# bad: [dd8f4aa045132c8119d74079ec4ddc644437d633] 2016-05-05: source-hash-cbb6367e75e3cc8b5b2b6f2ed703e5a316d8f325
git bisect bad dd8f4aa045132c8119d74079ec4ddc644437d633
# good: [17b173eb15e97aa3b46ab7e2b6401755499e696c] 2016-05-04: source-hash-fe81d707b5b4e832b249ae879a75f336cd06a81f
git bisect good 17b173eb15e97aa3b46ab7e2b6401755499e696c
# first bad commit: [dd8f4aa045132c8119d74079ec4ddc644437d633] 2016-05-05: source-hash-cbb6367e75e3cc8b5b2b6f2ed703e5a316d8f325


Note: It is already visible in the print preview in the print dialog whether or not the image is going to be printed on the second page or not.
Comment 5 Michael Stahl 2016-09-20 20:25:55 UTC Comment hidden (no-value)
Comment 6 Michael Stahl 2016-09-20 20:45:15 UTC
ah i should read more carefully: "print preview in the print dialog",
not "print preview in writer toolbar"! can reproduce it now.

reverting this commit on master seems to fix it:

commit 23dfb9e14571d96f9bd23d178f397ee35c36f686
Author:     Xisco Fauli <anistenis@gmail.com>
AuthorDate: Wed Apr 27 02:03:35 2016 +0200
Commit:     Thorsten Behrens <Thorsten.Behrens@CIB.de>
CommitDate: Wed May 4 12:21:44 2016 +0000

    tdf#62525 vcl: use cow_wrapper for mapmod
    
    Change-Id: I25ddaeb051f171388bb490a23bf03dbaf0add281
    Reviewed-on: https://gerrit.libreoffice.org/24438
    Tested-by: Jenkins <ci@libreoffice.org>
    Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
Comment 7 Xisco Faulí 2016-09-26 15:24:39 UTC Comment hidden (no-value)
Comment 8 Franklin Schiftan 2016-10-20 05:28:03 UTC
The same effect here with *.png and *.jpg in
 
Version: 5.2.2.2
Build-ID: 8f96e87c890bf8fa77463cd4b640a2312823f3ad
CPU-Threads: 8; BS-Version: Windows 6.1; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE)
Comment 9 Franklin Schiftan 2016-10-20 08:50:32 UTC
As Regina wrote in the user's list properly, the bug appears only if from another programme copied pictures are inserted directly in Writer. As soon as the pictures are pasted before briefly in Draw and are copied then from there again and are inserted afterwards to Writer, everything is correct. Why?
Comment 10 Robert Großkopf 2016-10-20 09:38:37 UTC
Created attachment 128092 [details]
Image, first imported to Draw and then copied into Writer, works right.
Comment 11 Robert Großkopf 2016-10-20 09:44:44 UTC
Created attachment 128093 [details]
Document with images inserted from Draw.

The bug couldn't be reproduced here, when I do the following steps:

Open the Writer document.
Open a new Draw document.
Import the image to Draw.
Copy the image from Draw.
Insert the image into Writer.

Both images were printed printed when using 2 page per sheet layout.

My system: OpenSUSE 42.1 64bit rpm, LO 5.2.2.2
Comment 12 Xisco Faulí 2016-11-09 21:05:24 UTC
*** Bug 103795 has been marked as a duplicate of this bug. ***
Comment 13 Commit Notification 2016-11-15 14:52:57 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5d1a788468ef94cd1de4400d3c1e38d768f7bf8d

fix tdf#101832 and tdf#100617

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2016-11-17 08:53:18 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cbac26485f1456b70c51969a1df11bf08643d894&h=libreoffice-5-2

fix tdf#101832 and tdf#100617

It will be available in 5.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Xisco Faulí 2017-01-12 18:10:28 UTC
*** Bug 102986 has been marked as a duplicate of this bug. ***