tdf#100617 Fix print preview in the print dialog

Change-Id: I5bce60388f0bfe529860275ff778961fe6e1af44